// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled toggle button 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "overflow": "visible",
      },
      {
        "height": 40,
        "width": 40,
      },
      {
        "height": 42,
        "margin": 0,
        "width": 42,
      },
      {
        "backgroundColor": "rgba(230, 224, 233, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 4,
      },
      undefined,
      {
        "borderRadius": 4,
      },
    ]
  }
  testID="icon-button-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": undefined,
          "borderColor": "rgba(202, 196, 208, 1)",
          "borderWidth": 0,
        },
        {
          "borderRadius": 4,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      centered={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          false,
          [
            {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
            },
            null,
            undefined,
          ],
        ]
      }
      testID="icon-button"
    >
      <View
        style={
          {
            "opacity": 0.38,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(29, 27, 32, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          heart
        </Text>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 9,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders toggle button 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "overflow": "visible",
      },
      {
        "height": 40,
        "width": 40,
      },
      {
        "height": 42,
        "margin": 0,
        "width": 42,
      },
      {
        "backgroundColor": "rgba(230, 224, 233, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 4,
      },
      undefined,
      {
        "borderRadius": 4,
      },
    ]
  }
  testID="icon-button-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": undefined,
          "borderColor": "rgba(202, 196, 208, 1)",
          "borderWidth": 0,
        },
        {
          "borderRadius": 4,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      centered={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          false,
          [
            {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
            },
            null,
            undefined,
          ],
        ]
      }
      testID="icon-button"
    >
      <View
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(73, 69, 79, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          heart
        </Text>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 9,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;

exports[`renders unchecked toggle button 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "overflow": "visible",
      },
      {
        "height": 40,
        "width": 40,
      },
      {
        "height": 42,
        "margin": 0,
        "width": 42,
      },
      {
        "backgroundColor": "rgba(243, 237, 247, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 4,
      },
      undefined,
      {
        "borderRadius": 4,
      },
    ]
  }
  testID="icon-button-container"
>
  <View
    collapsable={false}
    style={
      [
        {
          "height": "100%",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "backgroundColor": undefined,
          "borderColor": "rgba(202, 196, 208, 1)",
          "borderWidth": 0,
        },
        {
          "borderRadius": 4,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      centered={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 4,
          "left": 4,
          "right": 4,
          "top": 4,
        }
      }
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        [
          false,
          [
            {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
            },
            null,
            undefined,
          ],
        ]
      }
      testID="icon-button"
    >
      <View
        style={
          {
            "opacity": 0.38,
          }
        }
      >
        <Text
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          pointerEvents="none"
          selectable={false}
          style={
            [
              {
                "color": "rgba(29, 27, 32, 1)",
                "fontSize": 24,
              },
              [
                {
                  "lineHeight": 24,
                  "transform": [
                    {
                      "scaleX": 1,
                    },
                  ],
                },
                {
                  "backgroundColor": "transparent",
                },
              ],
            ]
          }
        >
          heart
        </Text>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="none"
    style={
      [
        {
          "borderWidth": 3,
          "bottom": -5,
          "left": -5,
          "pointerEvents": "none",
          "position": "absolute",
          "right": -5,
          "top": -5,
        },
        {
          "borderColor": "rgba(98, 91, 113, 1)",
        },
        {
          "borderRadius": 9,
          "opacity": 0,
        },
      ]
    }
  />
</View>
`;
